--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section-1>
     <ul>
         <li>
-            <img width="1600" height="600" src="images/business.jpg" alt="Effective solutions for your business">
+            <img src="images/business.jpg" alt="Effective solutions for your business"width="1600" height="600" >
         </li>
         <li><h1>Эффективные решения для вашего бизнеса</h1></li>
         <li>
@@ -64,13 +64,13 @@
     <h2>Чем мы занимаемся</h2>
     <ul>
         <li>
-            <img width="370" height="294" src="images/first-photo.jpg" alt="projects"> 
+            <img src="images/first-photo.jpg" alt="projects"width="370" height="294"> 
         </li>
         <li>
-            <img width="370" height="294" src="images/second-photo.jpg" alt="our-projects">
+            <img src="images/second-photo.jpg" alt="our-projects" width="370" height="294">
         </li>
         <li>
-            <img width="370" height="294" src="images/third-photo.jpg" alt="others-projects">
+            <img src="images/third-photo.jpg" alt="others-projects" width="370" height="294">
         </li>
     </ul>
 </section-3>
@@ -78,19 +78,19 @@
     <section-4>
     <h2>Наша команда</h2>
     <ul>
-    <li> <img width="270" height="260" src="images/product-designer.jpg" alt="product-designer"> 
+    <li> <img src="images/product-designer.jpg" alt="product-designer" width="270" height="260"> 
     <h3>Игорь Демьяненко</h3>
     <p>Product Designer</p>
     </li>
-    <li> <img width="270" height="260" src="images/frontend-developer.jpg" alt="frontend-developer">
+    <li> <img src="images/frontend-developer.jpg" alt="frontend-developer" width="270" height="260">
     <h3>Ольга Репина</h3>
     <p>Frontend Developer</p>
     </li> 
-    <li> <img width="270" height="260" src="images/marketing.jpg" alt="marketing">
+    <li> <img src="images/marketing.jpg" alt="marketing" width="270" height="260">
     <h3>Николай Тарасов</h3>
     <p>Marketing</p>
     </li>
-    <li> <img width="270" height="260" src="images/ui-designer.jpg" alt="ui-designer">
+    <li> <img src="images/ui-designer.jpg" alt="ui-designer" width="270" height="260">
     <h3>Михаил Ермаков</h3>
     <p>UI Designer</p>
     </li>
