--- a/index.html
+++ b/index.html
@@ -9,37 +9,30 @@
 <body>
     <!--Header-->
     <header>
-        <ul>
-            <li><a href="WebStudio"><h2>WebStudio</h2></a></li>
-            <li> <p>Студия</p><nav> 
-                <ul>
-                    <li> <a href="/section-3">Чем мы занимаемся</a></li>
-                    <li> <a href="/section-4">Наша команда</a></li>
-                </ul>
-            </nav> 
-                </li>
-            <li>Портфолио</li>
-            <li> <p>Контакты</p></li>
-            <li> <a href="mail.to:info@example.com"></a><p>info@example.com</p></li>
-            <li><p>+38 099 111 11 11</p></li>
+        <nav>
+            <a href="WebStudio">WebStudio</a>
+           <ul>
+           <li> <a href="Студия">Студия</a></li>
+           <li> <a href="Портфолио">Портфолио</a></li>
+           <li> <a href="Контакты">Контакты</a></li>
+        </ul>
+        </nav>
+         
+         <ul>
+            <li> <a href="mail.to:info@example.com">info@example.com</a></li>
+            <li> <a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </header>
     <main>
     <!--Main-->
     <!--Section-1-->
-    <section-1>
-    <ul>
-        <li>
-            <img src="images/business.jpg" alt="Effective solutions for your business"width="1600" height="600" >
-        </li>
-        <li><h1>Эффективные решения для вашего бизнеса</h1></li>
-        <li>
-            <button type="button">Заказать услугу</button>
-        </li>
-    </ul>
-</section-1>
+    <section>
+            <img src="images/business.jpg" alt="Effective solutions for your business" width="1600" height="600" >
+        <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button> 
+</section>
     <!--Section-2-->
-    <section-2>
+    <section>
     <ul>
         <li>
             <h3>Внимание к деталям</h3>
@@ -58,13 +51,13 @@
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
     </ul>
-</section-2>
+</section>
     <!--Section-3-->
-    <section-3>
+    <section>
     <h2>Чем мы занимаемся</h2>
     <ul>
         <li>
-            <img src="images/first-photo.jpg" alt="projects"width="370" height="294"> 
+            <img src="images/first-photo.jpg" alt="projects" width="370" height="294"> 
         </li>
         <li>
             <img src="images/second-photo.jpg" alt="our-projects" width="370" height="294">
@@ -73,9 +66,9 @@
             <img src="images/third-photo.jpg" alt="others-projects" width="370" height="294">
         </li>
     </ul>
-</section-3>
+</section>
     <!--Section-4-->
-    <section-4>
+    <section>
     <h2>Наша команда</h2>
     <ul>
     <li> <img src="images/product-designer.jpg" alt="product-designer" width="270" height="260"> 
@@ -95,22 +88,16 @@
     <p>UI Designer</p>
     </li>
 </ul> 
-</section-4>
+</section>
 </main>
     <!--Footer-->
     <footer>
-        <ul>
-            <li><a href="WebStudio"><h2>WebStudio</h2></a></li>
-            <li> 
-                <address >г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li>
-                <p>info@example.com</p>
-            </li>
-            <li>
-                <p>+38 099 111 11 11</p>
-            </li>
-        </ul>
+    <a href="WebStudio">WebStudio</a>
+    <address >г. Киев, пр-т Леси Украинки, 26</address> 
+    <ul>
+    <li><a href="mail.to:info@example.com">info@example.com</a></li>
+    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li> 
+    </ul>
     </footer>
 
 </body>
